--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/jiarchen
+spring.datasource.username=jiarchen
+spring.datasource.password=110527406
