--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/jiarchen
-spring.datasource.username=jiarchen
-spring.datasource.password=110527406
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/ohuang
+spring.datasource.username=ohuang
+spring.datasource.password=110884754
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
