--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/jiarchen
 spring.datasource.username=jiarchen
 spring.datasource.password=110527406
