mail sending for password reset done
mail can be send now for password reset, a temporary password will be sent to user so they can login and reset password on profile page.
profile page still in progress

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+
         <!--Bootstrap and Jquery-->
         <dependency>
             <groupId>org.webjars</groupId>
