--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,13 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/jiarchen
 spring.datasource.username=jiarchen
 spring.datasource.password=110527406
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username=LevelCreator416@gmail.com
+spring.mail.password=hfmdfvicbunjythm
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.timeout = 25000
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.required = true
