Allows users to toggle their projects public or private. Display public or private projects the home screen.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/jiarchen
-spring.datasource.username=jiarchen
-spring.datasource.password=110527406
+spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/ohuang
+spring.datasource.username=ohuang
+spring.datasource.password=110884754
 
 
 ## Hibernate Properties
