--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/jiarchen
-spring.datasource.username=jiarchen
-spring.datasource.password=110527406
-
+#spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/jiarchen
+#spring.datasource.username=jiarchen
+#spring.datasource.password=110527406
+spring.datasource.url=jdbc:mysql://levelcreator.cv2z9pivse9g.us-east-2.rds.amazonaws.com/levelcreator
+spring.datasource.username=admin
+spring.datasource.password=Cse416416!
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
