--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,21 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/jiarchen
 #spring.datasource.username=jiarchen
 #spring.datasource.password=110527406
+
 spring.datasource.url=jdbc:mysql://levelcreator.cv2z9pivse9g.us-east-2.rds.amazonaws.com/levelcreator
 spring.datasource.username=admin
 spring.datasource.password=Cse416416!
+
+#spring.datasource.url=jdbc:mysql://database-1.clavezsvmjbb.us-east-2.rds.amazonaws.com/levelcreator
+#spring.datasource.username=admin
+#spring.datasource.password=cse416416
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 ## Hibernate Logging
-logging.level.org.hibernate.SQL= DEBUG
-
+logging.level.org.hibernate.SQL=DEBUG
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
