--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net/heroku_87099c19481bbb4
-spring.datasource.username=ba58dd1c6e5e94
-spring.datasource.password=c8278bba
+#spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net/heroku_87099c19481bbb4
+#spring.datasource.username=ba58dd1c6e5e94
+#spring.datasource.password=c8278bba
 #spring.datasource.url=jdbc:mysql://mysql3.cs.stonybrook.edu:3306/jiarchen
 #spring.datasource.username=jiarchen
 #spring.datasource.password=110527406
 
-#spring.datasource.url=jdbc:mysql://levelcreator.cv2z9pivse9g.us-east-2.rds.amazonaws.com/levelcreator
-#spring.datasource.username=admin
-#spring.datasource.password=Cse416416!
+spring.datasource.url=jdbc:mysql://levelcreator.cv2z9pivse9g.us-east-2.rds.amazonaws.com/levelcreator
+spring.datasource.username=admin
+spring.datasource.password=Cse416416!
 
 #spring.datasource.url=jdbc:mysql://database-1.clavezsvmjbb.us-east-2.rds.amazonaws.com/levelcreator
 #spring.datasource.username=admin
