--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net/heroku_87099c19481bbb4
 #spring.datasource.username=ba58dd1c6e5e94
 #spring.datasource.password=c8278bba
